# geo1015_hw4_group_4

./: .gitignore  README.md  README.txt
.ipynb_checkpoints/: README-checkpoint.txt
04/: CMakeLists.txt  README.md
04/data/: 3x3.asc  dem_01.asc
04/src/: DatasetASC.cpp  DatasetASC.h  main.cpp
code/: DatasetASC.cpp  Rasterize.ipynb  create_canopy_height.py  create_chm.py  crop_notebook.ipynb  cropping_code.py  main.cpp  main.ipynb  main.py  point_filter.py  unclassified_points_with_one_return.copc.laz  vegetation_filter.py
code/.ipynb_checkpoints/: create_canopy_height-checkpoint.py  create_chm-checkpoint.py  cropping_code-checkpoint.py  main-checkpoint.ipynb  main-checkpoint.py  vegetation_filter-checkpoint.py
data/: chm.tiff  step4.tiff
report/: front_page.tex  preamble.tex  report.tex
src/: DatasetASC.cpp  main.cpp
